@@ -62,6 +62,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #17087: Improved the repr for regular expression match objects.
+
 - Issue #18235: Fix the sysconfig variables LDSHARED and BLDSHARED under AIX.
   Patch by David Edelsohn.
 
